--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,70 +1,70 @@
 site_name: CassiaDB Docs
+copyright: © 2018, Canela Software, Inc.
 pages:
   - Home: index.md
   - API:
-    - Main:
-      - Read.md
-      - BatchRead.md
-      - LookupValue.md
-      - ReadKeys.md
-      - BatchReadKeys.md
-      - BatchMerge.md
-      - Create.md
-      - BatchCreate.md
-      - Update.md
-      - BatchUpdate.md
-      - Delete.md
-      - BatchDelete.md
-      - DeleteKeys.md
-      - BatchDeleteKeys.md
-      - Sort.md
-      - BatchSort.md
-      - ReadBlob.md
-      - CreateBlob.md
-      - DeleteBlob.md
-      - Query.md
-      - BatchQuery.md
-      - Count.md
-      - BatchCount.md
-      - List.md
-      - SendEmail.md
-      - SetLogMode.md
-      - SDK.md
-      - LoadTable.md
-      - UnloadTable.md
-      - SdkBuild.md
-      - Ping.md
-      - PingNode.md
-      - CheckInternetStatus.md
-      - FlushCache.md
-      - SetFlushCacheInterval.md
-      - SetCloudTolerance.md
-      - Result.md
-      - Sync.md
-      - ExportAsJSON.md
-      - ExportAsLSON.md
-    - Auth:
-      - Auth.md
-    - Table Manipulation:
-      - CreateTable.md
-      - DeleteTable.md
-      - RenameTable.md
-      - TableID.md
-      - TableKeys.md
-      - TableNames.md
-      - AddKeys.md
-      - RenameKey.md
-      - RemoveKeys.md
-      - UpdateTableSchemaMode.md
-    - Project Manipulation:
-      - CreateProject.md
-      - DeleteProject.md
-      - RenameProject.md
-      - AddTableToProject.md
-      - RemoveTableFromProject.md
-      - TeamID.md
+    - Read.md
+    - BatchRead.md
+    - LookupValue.md
+    - ReadKeys.md
+    - BatchReadKeys.md
+    - BatchMerge.md
+    - Create.md
+    - BatchCreate.md
+    - Update.md
+    - BatchUpdate.md
+    - Delete.md
+    - BatchDelete.md
+    - DeleteKeys.md
+    - BatchDeleteKeys.md
+    - Sort.md
+    - BatchSort.md
+    - ReadBlob.md
+    - CreateBlob.md
+    - DeleteBlob.md
+    - Query.md
+    - BatchQuery.md
+    - Count.md
+    - BatchCount.md
+    - List.md
+    - SendEmail.md
+    - SetLogMode.md
+    - SDK.md
+    - LoadTable.md
+    - UnloadTable.md
+    - SdkBuild.md
+    - Ping.md
+    - PingNode.md
+    - CheckInternetStatus.md
+    - FlushCache.md
+    - SetFlushCacheInterval.md
+    - SetCloudTolerance.md
+    - Result.md
+    - Sync.md
+    - ExportAsJSON.md
+    - ExportAsLSON.md
+    - Auth.md
+    - CreateTable.md
+    - DeleteTable.md
+    - RenameTable.md
+    - TableID.md
+    - TableKeys.md
+    - TableNames.md
+    - AddKeys.md
+    - RenameKey.md
+    - RemoveKeys.md
+    - UpdateTableSchemaMode.md
+    - CreateProject.md
+    - DeleteProject.md
+    - RenameProject.md
+    - AddTableToProject.md
+    - RemoveTableFromProject.md
+    - TeamID.md
   - Other Info:
     - CDBCache.md
     - Metadata.md
     - QueryOperators.md
-theme: readthedocs
+theme:
+    name: readthedocs
+    titles_only: true
+    custom_dir: theme_customizations/
