--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,21 @@
-site_name: CassiaDB Docs
+site_name: LiveCloud Documentation
 site_url: https://docs.livecloud.io
-site_description: CassiaDB Documentation site - Part of LiveCloud Backend
+site_description: LiveCloud Documentation site
 site_author: Canela Software
 copyright: © 2018, Canela Software, Inc.
 pages:
   - Home: 'index.md'
-  - About CassiaDB:
+  - Tutorials:
+    - Setting Up LiveCloud: 'Setup.md'
+    - Building Standalones: 'Standalone.md'
+  - CassiaDB in Detail:
     - CDBCache: 'CDBCache.md'
-    - Metadata: 'Metadata.md'
+    - Metadata: 'metadata.md'
     - QueryOperators: 'QueryOperators.md'
-  - API Reference:
+  - CassiaDB API Reference:
     - AddKeys: 'AddKeys.md'
     - AddTableToProject: 'AddTableToProject.md'
+    - AdvancedQuery: 'AdvancedQuery.md'
     - Auth: 'Auth.md'
     - BatchCount: 'BatchCount.md'
     - BatchCreate: 'BatchCreate.md'
@@ -42,6 +46,7 @@ pages:
     - LookupValue: 'LookupValue.md'
     - Ping: 'Ping.md'
     - PingNode: 'PingNode.md'
+    - ProjectNames: 'ProjectNames.md'
     - Query: 'Query.md'
     - Read: 'Read.md'
     - ReadBlob: 'ReadBlob.md'
@@ -72,6 +77,7 @@ markdown_extensions:
 theme:
     name: readthedocs
     titles_only: true
+    navigation_depth: 2
     custom_dir: theme_customizations/
     hljs_style: a11y-dark
     hljs_languages:
