Update new docs
Added new docs to the site.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
   - Tutorials:
     - Setting Up LiveCloud: 'Setup.md'
     - Building Standalones: 'Standalone.md'
+    - Adding User Accounts: 'AddingUsers.md'
   - CassiaDB in Detail:
     - CDBCache: 'CDBCache.md'
     - Metadata: 'metadata.md'
@@ -33,11 +34,13 @@ nav:
     - CreateBlob: 'CreateBlob.md'
     - CreateProject: 'CreateProject.md'
     - CreateTable: 'CreateTable.md'
+    - CreateUserAccount: 'CreateUserAccount.md'
     - Delete: 'Delete.md'
     - DeleteBlob: 'DeleteBlob.md'
     - DeleteKeys: 'DeleteKeys.md'
     - DeleteProject: 'DeleteProject.md'
     - DeleteTable: 'DeleteTable.md'
+    - DeleteUserAccount: 'DeleteUserAccount.md'
     - ExportAsJSON: 'ExportAsJSON.md'
     - ExportAsLSON: 'ExportAsLSON.md'
     - FlushCache: 'FlushCache.md'
@@ -51,6 +54,7 @@ nav:
     - Read: 'Read.md'
     - ReadBlob: 'ReadBlob.md'
     - ReadKeys: 'ReadKeys.md'
+    - ReadUserAccount: 'ReadUserAccount.md'
     - RemoveKeys: 'RemoveKeys.md'
     - RemoveTableFromProject: 'RemoveTableFromProject.md'
     - RenameKey: 'RenameKey.md'
@@ -67,11 +71,14 @@ nav:
     - Sync: 'Sync.md'
     - TableID: 'TableID.md'
     - TableKeys: 'TableKeys.md'
+    - TableKeysType: 'TableKeysType.md'
     - TableNames: 'TableNames.md'
     - TeamID: 'TeamID.md'
     - UnloadTable: 'UnloadTable.md'
     - Update: 'Update.md'
+    - UpdateBlob: 'UpdateBlob.md'
     - UpdateTableSchemaMode: 'UpdateTableSchemaMode.md'
+    - UpdateUserAccount: 'UpdateUserAccount.md'
   - Other Info:
     - LiveCloud Homepage: 'https://livecloud.io'
 markdown_extensions:
