Update with sections

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,80 +8,92 @@ nav:
   - Tutorials:
     - Setting Up LiveCloud: 'Setup.md'
     - Building Standalones: 'Standalone.md'
-    - Adding User Accounts: 'AddingUsers.md'
+    - Authorization and Accounts: 'AddingUsers.md'
   - CassiaDB in Detail:
     - CDBCache: 'CDBCache.md'
     - Metadata: 'metadata.md'
     - Query Operators: 'QueryOperators.md'
   - CassiaDB API Reference:
-    - AddKeys: 'AddKeys.md'
-    - AddTableToProject: 'AddTableToProject.md'
-    - AdvancedQuery: 'AdvancedQuery.md'
-    - Auth: 'Auth.md'
-    - BatchAdvancedQuery: 'BatchAdvancedQuery.md'
-    - BatchCount: 'BatchCount.md'
-    - BatchCreate: 'BatchCreate.md'
-    - BatchDelete: 'BatchDelete.md'
-    - BatchDeleteKeys: 'BatchDeleteKeys.md'
-    - BatchMerge: 'BatchMerge.md'
-    - BatchQuery: 'BatchQuery.md'
-    - BatchRead: 'BatchRead.md'
-    - BatchReadKeys: 'BatchReadKeys.md'
-    - BatchSort: 'BatchSort.md'
-    - BatchUpdate: 'BatchUpdate.md'
-    - CheckInternetStatus: 'CheckInternetStatus.md'
-    - Count: 'Count.md'
-    - Create: 'Create.md'
-    - CreateBlob: 'CreateBlob.md'
-    - CreateProject: 'CreateProject.md'
-    - CreateTable: 'CreateTable.md'
-    - CreateUserAccount: 'CreateUserAccount.md'
-    - Delete: 'Delete.md'
-    - DeleteBlob: 'DeleteBlob.md'
-    - DeleteKeys: 'DeleteKeys.md'
-    - DeleteProject: 'DeleteProject.md'
-    - DeleteTable: 'DeleteTable.md'
-    - DeleteUserAccount: 'DeleteUserAccount.md'
-    - ExportAsJSON: 'ExportAsJSON.md'
-    - ExportAsLSON: 'ExportAsLSON.md'
-    - FlushCache: 'FlushCache.md'
-    - List: 'List.md'
-    - LoadTable: 'LoadTable.md'
-    - Logout: 'Logout.md'
-    - LookupValue: 'LookupValue.md'
-    - Ping: 'Ping.md'
-    - PingNode: 'PingNode.md'
-    - ProjectNames: 'ProjectNames.md'
-    - Query: 'Query.md'
-    - Read: 'Read.md'
-    - ReadBlob: 'ReadBlob.md'
-    - ReadKeys: 'ReadKeys.md'
-    - ReadUserAccount: 'ReadUserAccount.md'
-    - RemoveKeys: 'RemoveKeys.md'
-    - RemoveTableFromProject: 'RemoveTableFromProject.md'
-    - RenameKey: 'RenameKey.md'
-    - RenameProject: 'RenameProject.md'
-    - RenameTable: 'RenameTable.md'
-    - ResendVerificationEmail: 'ResendVerificationEmail.md'
-    - Result: 'Result.md'
-    - SDK: 'SDK.md'
-    - SdkBuild: 'SdkBuild.md'
-    - SendEmail: 'SendEmail.md'
-    - SetCloudTolerance: 'SetCloudTolerance.md'
-    - SetFlushCacheInterval: 'SetFlushCacheInterval.md'
-    - SetLogMode: 'SetLogMode.md'
-    - Sort: 'Sort.md'
-    - Sync: 'Sync.md'
-    - TableID: 'TableID.md'
-    - TableKeys: 'TableKeys.md'
-    - TableKeysType: 'TableKeysType.md'
-    - TableNames: 'TableNames.md'
-    - TeamID: 'TeamID.md'
-    - UnloadTable: 'UnloadTable.md'
-    - Update: 'Update.md'
-    - UpdateBlob: 'UpdateBlob.md'
-    - UpdateTableSchemaMode: 'UpdateTableSchemaMode.md'
-    - UpdateUserAccount: 'UpdateUserAccount.md'
+    - CRUD:
+        - Create: 'Create.md'
+        - BatchCreate: 'BatchCreate.md'        
+        - Read: 'Read.md'
+        - BatchRead: 'BatchRead.md'
+        - ReadKeys: 'ReadKeys.md'
+        - LookupValue: 'LookupValue.md'
+        - BatchReadKeys: 'BatchReadKeys.md'
+        - Update: 'Update.md'
+        - BatchUpdate: 'BatchUpdate.md'
+        - BatchMerge: 'BatchMerge.md'
+        - Delete: 'Delete.md'
+        - BatchDelete: 'BatchDelete.md'
+        - DeleteKeys: 'DeleteKeys.md'
+        - BatchDeleteKeys: 'BatchDeleteKeys.md'
+    - Query:
+        - Query: 'Query.md'
+        - AdvancedQuery: 'AdvancedQuery.md'
+        - BatchQuery: 'BatchQuery.md'
+        - BatchAdvancedQuery: 'BatchAdvancedQuery.md'
+    - Blob:
+        - CreateBlob: 'CreateBlob.md'
+        - DeleteBlob: 'DeleteBlob.md'
+        - ReadBlob: 'ReadBlob.md'
+        - UpdateBlob: 'UpdateBlob.md'
+    - Auth:
+        - Auth: 'Auth.md'
+        - Logout: 'Logout.md'
+    - User Accounts:
+        - CreateUserAccount: 'CreateUserAccount.md'
+        - DeleteUserAccount: 'DeleteUserAccount.md'
+        - ReadUserAccount: 'ReadUserAccount.md'
+        - ResendVerificationEmail: 'ResendVerificationEmail.md'
+        - UpdateUserAccount: 'UpdateUserAccount.md'
+    - Utilities:
+        - Count: 'Count.md'
+        - BatchCount: 'BatchCount.md'
+        - List: 'List.md'
+        - Sort: 'Sort.md'
+        - BatchSort: 'BatchSort.md'
+        - SDK: 'SDK.md'
+        - SdkBuild: 'SdkBuild.md'
+        - SendEmail: 'SendEmail.md'
+        - Sync: 'Sync.md'
+        - TableID: 'TableID.md'
+        - TeamID: 'TeamID.md'
+        - LoadTable: 'LoadTable.md'
+        - UnloadTable: 'UnloadTable.md'
+    - Error Checking:
+        - Result: 'Result.md'
+        - SetLogMode: 'SetLogMode.md'
+    - Internet:
+        - CheckInternetStatus: 'CheckInternetStatus.md'
+        - FlushCache: 'FlushCache.md'
+        - Ping: 'Ping.md'
+        - PingNode: 'PingNode.md'
+        - SetCloudTolerance: 'SetCloudTolerance.md'
+        - SetFlushCacheInterval: 'SetFlushCacheInterval.md'
+    - Export:
+        - ExportAsJSON: 'ExportAsJSON.md'
+        - ExportAsLSON: 'ExportAsLSON.md'
+    - Table Management:
+        - CreateTable: 'CreateTable.md'
+        - RenameTable: 'RenameTable.md'
+        - UpdateTableSchemaMode: 'UpdateTableSchemaMode.md'
+        - DeleteTable: 'DeleteTable.md'
+        - AddKeys: 'AddKeys.md'
+        - RenameKey: 'RenameKey.md'
+        - RemoveKeys: 'RemoveKeys.md'
+        - TableKeys: 'TableKeys.md'
+        - TableKeysType: 'TableKeysType.md'
+        - TableNames: 'TableNames.md'
+        - AddTableToProject: 'AddTableToProject.md'
+        - RemoveTableFromProject: 'RemoveTableFromProject.md'
+    - Project Management:
+        - CreateProject: 'CreateProject.md'
+        - RenameProject: 'RenameProject.md'
+        - DeleteProject: 'DeleteProject.md'
+        - ProjectNames: 'ProjectNames.md'
+
   - Other Info:
     - LiveCloud Homepage: 'https://livecloud.io'
 markdown_extensions:
@@ -89,7 +101,9 @@ markdown_extensions:
 theme:
     name: readthedocs
     titles_only: true
-    navigation_depth: 2
+    navigation_depth: 3
+    extra_css:
+        - css/extra.css
     custom_dir: theme_customizations/
     hljs_style: a11y-dark
     hljs_languages:
