Add 404 page. Change site directory name to "html" for easy of copy/paste to server

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_url: https://docs.livecloud.io
 site_description: LiveCloud Documentation site
 site_author: Canela Software
 copyright: © 2018, Canela Software, Inc.
+site_dir:  html
 nav:
   - Home: 'index.md'
   - Tutorials:
