--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
   - Home: 'index.md'
   - Tutorials:
     - Setting Up LiveCloud: 'Setup.md'
+    - Simple CRUD Example: 'CRUDExample.md'
     - Building Standalones: 'Standalone.md'
     - Authorization and Accounts: 'AddingUsers.md'
   - CanelaDB in Detail:
