Add and update docs
Add doc for batch sync and update doc for sync.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,7 @@ nav:
         - SdkBuild: 'SdkBuild.md'
         - SendEmail: 'SendEmail.md'
         - Sync: 'Sync.md'
+        - BatchSync: 'BatchSync.md'
         - TableID: 'TableID.md'
         - TeamID: 'TeamID.md'
         - ProjectID: 'ProjectID.md'
