cdb_calcUpdate docs
- Updated cdb_calcUpdate
- Added cdb_calcBatchUpdate
- Updated mkdocs.yml with arwareness of new docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
         - DeleteKeys: 'DeleteKeys.md'
         - BatchDeleteKeys: 'BatchDeleteKeys.md'
         - CalcUpdate: 'CalcUpdate.md'
+        - CalcBatchUpdate: 'CalcBatchUpdate.md'
     - Query:
         - Query: 'Query.md'
         - AdvancedQuery: 'AdvancedQuery.md'
