--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: LiveCloud Documentation
 site_url: https://docs.livecloud.io
 site_description: LiveCloud Documentation site
 site_author: Canela Software
-copyright: © 2018-2020, Canela Software, Inc.
+copyright: © 2018-2021, Canela Software, Inc.
 site_dir:  html
 nav:
   - Home: 'index.md'
@@ -63,6 +63,7 @@ nav:
         - UpdateUserAccount: 'UpdateUserAccount.md'
         - UserTableName: 'UserTableName.md'
     - Utilities:
+        - AutoSetupAuthKey: 'AutoSetupAuthKey.md'
         - Count: 'Count.md'
         - BatchCount: 'BatchCount.md'
         - List: 'List.md'
